Fixed team logo on mobile
Fixed a bug where the team logos where not resizing on smaller devices

--- a/front-end/index/custom.css
+++ b/front-end/index/custom.css
@@ -178,6 +178,9 @@ section.team div div{
 	margin: calc(10% / 6);
 	float: left;
 }
+section.team div div img{
+	width: 100%;
+}
 section.team div div p{
 	font-weight: 900;
 	padding:0;
